[package]
authors = ["Leo Conrad-Shah <singularlymappedtotheownzone@gmail.com>"]
name = "fuse-sys"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "filesystem-macro",
    "filesystem-error"
]

[dependencies]
filesystem-macro = { path = "filesystem-macro", optional = true }
filesystem-error = { path = "filesystem-error", optional = true }

[dev-dependencies]
nix = "0.24.2"
fuse-sys = { path = ".", features = ["auto"] }
clap = { version = "3.1.6", features = ["derive"] }

[build-dependencies]
bindgen = "*"
pkg-config = "0.3.25"

[features]
auto = ["filesystem-macro", "filesystem-error"]
